--- a/synthdist/pyproject.toml
+++ b/synthdist/pyproject.toml
@@ -3,5 +3,14 @@ name = "synthdist"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.11"
+dependencies = [
+    "matplotlib>=3.10.1",
+    "numpy>=2.2.4",
+    "pandas>=2.2.3",
+    "scipy>=1.15.2",
+    "seaborn>=0.13.2",
+]
+
+[tool.uv.workspace]
+members = ["synthdist"]
